Update if_statements and add for/while notebooks

--- a/Python/05_control_structures/a)_if_statements.ipynb
+++ b/Python/05_control_structures/a)_if_statements.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7baa13b0",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enjoy this scary movie.\n"
+      "Sorry, you are too young for this scary movie\n",
+      "Watch this cartoon instead\n"
      ]
     }
    ],
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5333f4dd",
    "metadata": {},
    "outputs": [
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c2f6ec01",
    "metadata": {},
    "outputs": [
@@ -255,16 +256,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You will purchase 10 apples\n",
-      "You are a pensioner 50% discount in your whole purchase.\n",
-      "Full price: 100, discount price 50\n"
+      "Purchase pieces 10 apples, 10 sek / piece\n",
+      "Student: 30% discount.\n",
+      "Full price: 100 sek, discount price: 70 sek\n"
      ]
     }
    ],
    "source": [
     "apple_order = int(input(\"How many apples do you buy? \"))\n",
+    "print(f'Purchase pieces {apple_order} apples, 10 sek / piece')\n",
+    "apple_per_piece = 10\n",
+    "sum = [] \n",
+    "\n",
+    "customer_type = input(\"Are you a student or pensioner? 's' for student. 'p' for pensioner. 'n' for none\")\n",
+    "\n",
+    "if customer_type == \"s\":\n",
+    "    print(\"Student: 30% discount.\")\n",
+    "    apple_cost = apple_order * apple_per_piece\n",
+    "    apple_cost_discount = int(apple_cost * .70)\n",
+    "    print(f'Full price: {apple_cost} sek, discount price: {apple_cost_discount} sek')\n",
+    "\n",
+    "elif customer_type == \"p\":\n",
+    "    print(\"Pensioner: 50% discount.\")\n",
+    "    apple_cost = apple_order * apple_per_piece\n",
+    "    apple_cost_discount = int(apple_cost * .50)\n",
+    "    print(f'Full price: {apple_cost} sek, discount price: {apple_cost_discount} sek')\n",
+    "\n",
+    "elif customer_type == \"n\":\n",
+    "    apple_cost = apple_order * apple_per_piece\n",
+    "    print(f\"Full price: {apple_cost} sek.\")\n",
+    "\n",
+    "\n",
+    "else:\n",
+    "    print(\"Try order again.\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dc55a5a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\napple_order = int(input(\"How many apples do you buy? \"))\\nprint(f\\'You will purchase {apple_order} apples\\')\\n\\ncustomer_type = input(\"Are you a student or pensioner? \\'s\\' for student. \\'p\\' for pensioner. \\'n\\' for none\")\\n\\nif customer_type == \"s\":\\n    print(\"You are a student. 30% discount in your whole purchase.\")\\n    apple_cost = apple_order * 10\\n    apple_cost_discount = int(apple_cost * .70)\\n    print(f\\'Full price: {apple_cost}, discount price {apple_cost_discount}\\')\\n\\nelif customer_type == \"p\":\\n    print(\"You are a pensioner 50% discount in your whole purchase.\")\\n    apple_cost = apple_order * 10\\n    apple_cost_discount = int(apple_cost * .50)\\n    print(f\\'Full price: {apple_cost}, discount price {apple_cost_discount}\\')\\n\\nelif customer_type == \"n\":\\n    apple_cost = apple_order * 10\\n    print(f\"You pay full price: {apple_cost}.\")\\n\\nelse:\\n    print(\"Try again.\")\\n    '"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# one line if statement version\n",
+    "'''\n",
+    "apple_order = int(input(\"How many apples do you buy? \"))\n",
     "print(f'You will purchase {apple_order} apples')\n",
-    "sum = []\n",
     "\n",
     "customer_type = input(\"Are you a student or pensioner? 's' for student. 'p' for pensioner. 'n' for none\")\n",
     "\n",
@@ -285,7 +334,8 @@
     "    print(f\"You pay full price: {apple_cost}.\")\n",
     "\n",
     "else:\n",
-    "    print(\"Try again.\")"
+    "    print(\"Try again.\")\n",
+    "    '''"
    ]
   },
   {
@@ -299,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
