--- a/Python/05_control_structures/b)_while_statements.ipynb
+++ b/Python/05_control_structures/b)_while_statements.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "603cb56f",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
     "\n",
     "while i < 5:   # repeat multiple times until condition is met\n",
     "    print(i)\n",
-    "    i += 2\n",
+    "    i += 2 #assignment operator: i = i+2\n",
     "    \n"
    ]
   },
