--- a/Python/05_control_structures/c)_for_statements.ipynb
+++ b/Python/05_control_structures/c)_for_statements.ipynb
@@ -88,10 +88,49 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5de2597",
+   "id": "511c43ec",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25466daf",
    "metadata": {},
    "source": [
-    "##### random module"
+    "#### radnom module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1d111133",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random as rnd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "09706d23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# generate a dice result\n",
+    "dice_result = rnd.randint(1,6)    # use the alias when you want to use a function from this module\n",
+    "dice_result"
    ]
   },
   {
@@ -103,31 +142,78 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c1435720",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love to eat apple.\n",
+      "I love to eat grape.\n",
+      "I love to eat orange.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list is a collection of items/values/data\n",
+    "fruits = [\"apple\", \"grape\", \"orange\"]\n",
+    "\n",
+    "for fruit in fruits:   # fruits refer to a specific list. fruit is an intermediate variable\n",
+    "    print(f'I love to eat {fruit}.')\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "db0b9690",
    "metadata": {},
    "source": [
-    "##### example of pythonic code"
+    "##### example of pythonic code\n",
+    "\n",
+    "- examlple when writing a for loop with index\n",
+    "- problem solve: loop through the fruits list and also print out the index for each fruit\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "20f769d6",
+   "execution_count": 7,
+   "id": "d64b6f62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. apple\n",
+      "2. grape\n",
+      "3. orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"grape\", \"orange\"]\n",
+    "for i, fruit in enumerate(fruits, 1):\n",
+    "    print(f'{i}. {fruit}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c98938b",
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "511c43ec",
+   "id": "ad2e9fac",
    "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
