--- a/Python/05_control_structures/c)_for_statements.ipynb
+++ b/Python/05_control_structures/c)_for_statements.ipynb
@@ -202,7 +202,35 @@
    "cell_type": "markdown",
    "id": "7c98938b",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Rewrite the code above without the \"enumerate\" function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5ba3c5fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite fruits are:\n",
+      "1. apple\n",
+      "2. grape\n",
+      "3. orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"My favorite fruits are:\")\n",
+    "fruits = [\"apple\", \"grape\", \"orange\"]\n",
+    "i = 1 # index counter\n",
+    "for fruit in fruits:\n",
+    "    print(f'{i}. {fruit}')\n",
+    "    i += 1"
+   ]
   },
   {
    "cell_type": "markdown",
