--- a/Python/07_strings/strings.ipynb
+++ b/Python/07_strings/strings.ipynb
@@ -261,85 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "id": "7096f6d9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Math\n",
-      "biology \n",
-      "cHemMistry \n",
-      "Programming    \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# lstrip() for both sides\n",
     "for subject in subjects:\n",
-    "    print(subject.lstrip())\n",
+    "    (subject.lstrip())\n",
+    "\n",
     "\n",
     "# this is also doable in a dictionary but either key or value, one at a time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "20198a68",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "4\n",
-      "4\n",
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
-    "# use len() function to check the length of string\n",
-    "for subject in subjects:\n",
-    "    print(len(subjects))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "479e6dcf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# use len() function to check the length of string\n",
-    "for subject in subjects:\n",
-    "    print(len(subject))"
    ]
   },
   {
