--- a/Python/07_strings/strings.ipynb
+++ b/Python/07_strings/strings.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "id": "726a3c9d",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "'Kokchun Giang'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "id": "359a4484",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "id": "74276cd2",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "id": "da63ea5c",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "id": "24c6a052",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "id": "69f2ae1c",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "id": "20c6ff26",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "['Math', ' biology ', ' cHemMistry ', ' Programming    ']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "id": "6ba5075e",
    "metadata": {},
    "outputs": [
@@ -261,14 +261,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "id": "7096f6d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Math\n",
+      "biology \n",
+      "cHemMistry \n",
+      "Programming    \n"
+     ]
+    }
+   ],
    "source": [
     "# lstrip() for both sides\n",
     "for subject in subjects:\n",
-    "    (subject.lstrip())\n",
+    "    print(subject.lstrip())\n",
+    "    \n",
     "\n",
     "\n",
     "# this is also doable in a dictionary but either key or value, one at a time"
@@ -276,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 66,
    "id": "32a333bb",
    "metadata": {},
    "outputs": [
@@ -303,6 +315,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3bd41007",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "ca16e930",
    "metadata": {},
    "source": [
@@ -316,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "id": "2fb1ecc3",
    "metadata": {},
    "outputs": [],
@@ -326,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "97ccf9e7",
    "metadata": {},
    "outputs": [
@@ -336,7 +354,7 @@
        "['att', 'att']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "e63a4959",
    "metadata": {},
    "outputs": [
@@ -361,7 +379,7 @@
        "['katt', 'hatt']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "c864573c",
    "metadata": {},
    "outputs": [
@@ -384,7 +402,7 @@
        "['19950316']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 71,
    "id": "95eaecbb",
    "metadata": {},
    "outputs": [
@@ -411,7 +429,7 @@
        "['950316-2235', '890806-3212']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 72,
    "id": "e2fc959a",
    "metadata": {},
    "outputs": [
@@ -438,7 +456,7 @@
        "['19950316-2235']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
