--- a/Python/10_dictionary/dictionary.ipynb
+++ b/Python/10_dictionary/dictionary.ipynb
@@ -75,16 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8b74ead6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "':' expected after dictionary key (4063068564.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m\"interest\": \"math\", \"python\", \"yoga\":\u001b[39m\n                               ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m ':' expected after dictionary key\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kokchun\n",
+      "teacher\n",
+      "math\n",
+      "Sweden\n"
      ]
     }
    ],
@@ -93,12 +95,14 @@
     "          \"name\": \"Kokchun\",\n",
     "          \"age\": 34.9,\n",
     "          \"work\": \"teacher\",\n",
-    "          \"interest\": \"math\", \"python\", \"yoga\",\n",
+    "          \"interest\": [\"math\", \"python\", \"yoga\"],\n",
     "          \"address\": {\"country\":\"Sweden\", \"city\": \"Stockholm\"}\n",
     "          }\n",
     "\n",
     "print(person[\"name\"])\n",
-    "print(person[\"work\"])"
+    "print(person[\"work\"])\n",
+    "print(person[\"interest\"][0])\n",
+    "print(person[\"address\"][\"country\"])"
    ]
   },
   {
