--- a/Python/10_dictionary/dictionary.ipynb
+++ b/Python/10_dictionary/dictionary.ipynb
@@ -106,17 +106,195 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b53e9f32",
+   "metadata": {},
+   "source": [
+    "### Iterate over a dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9e3c7749",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "words = {\n",
+    "    \"data_structure\": \"means of storing data\",\n",
+    "    \"regression\": \"function to best fit the data\",\n",
+    "    \"function\": \"function bound to an object\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6c039a93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key: {key}\n",
+      "value: {value}\n",
+      "---------------\n",
+      "key: {key}\n",
+      "value: {value}\n",
+      "---------------\n",
+      "key: {key}\n",
+      "value: {value}\n",
+      "---------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in words.items():\n",
+    "    print(\"key: {key}\")\n",
+    "    print(\"value: {value}\")\n",
+    "    print(\"---------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1a63f81a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key: data_structure\n",
+      "Key: regression\n",
+      "Key: function\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in words.keys():\n",
+    "    print(f'Key: {key}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fe4b8aad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key: function bound to an object\n",
+      "Key: function bound to an object\n",
+      "Key: function bound to an object\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in words.values():\n",
+    "    print(f'Key: {value}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c2e9848",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8723021d",
+   "metadata": {},
+   "source": [
+    "### Dictionary Comprehension\n",
+    "- A dictionary comprehension is a concise way to create dictionaries using a compact and expressive syntax. It's similar to list comprehensions but produces dictionaries instead of lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "74de9679",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'f': 0, 'e': 10, 'd': 20, 'c': 30, 'b': 40, 'a': 50}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# produce a dicitonary called \"grade limit\"\n",
+    "grade_limit = {\n",
+    "    \"f\": 0,\n",
+    "    \"e\": 10,\n",
+    "    \"d\": 20,\n",
+    "    \"c\": 30,\n",
+    "    \"b\": 40,\n",
+    "    \"a\": 50\n",
+    "}\n",
+    "grade_limit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f073221d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 f\n",
+      "1 e\n",
+      "2 d\n",
+      "3 c\n",
+      "4 b\n",
+      "5 a\n",
+      "\n",
+      "{'f': 0, 'e': 10, 'd': 20, 'c': 30, 'b': 40, 'a': 50}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# i = index, grade = keys\n",
+    "# enumerate pairs them together\n",
+    "\n",
+    "# check the loop that will produce the dict comprehension\n",
+    "for i, grade in enumerate(\"fedcba\"):\n",
+    "    print(i, grade)\n",
+    "\n",
+    "print() \n",
+    "print(grade_limit) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4565bb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the same dictionary but with dictionary comprehension\n",
+    "\n",
+    "# make us of iterables\n",
+    "grade_limit = {grade: for i, grade in enumerate()}"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_code_along",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
