--- a/Python/10_dictionary/dictionary.ipynb
+++ b/Python/10_dictionary/dictionary.ipynb
@@ -115,21 +115,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "9e3c7749",
    "metadata": {},
    "outputs": [],
    "source": [
     "words = {\n",
-    "    \"data_structure\": \"means of storing data\",\n",
-    "    \"regression\": \"function to best fit the data\",\n",
-    "    \"function\": \"function bound to an object\"\n",
+    "        \"data structure\": \"means of storing data\",\n",
+    "        \"regression\": \"a function to best fit the data\",\n",
+    "        \"method\": \"a function bound to an object\"\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "6c039a93",
    "metadata": {},
    "outputs": [
@@ -137,28 +137,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "key: {key}\n",
-      "value: {value}\n",
-      "---------------\n",
-      "key: {key}\n",
-      "value: {value}\n",
-      "---------------\n",
-      "key: {key}\n",
-      "value: {value}\n",
-      "---------------\n"
+      "Key: data structure\n",
+      "Value: means of storing data\n",
+      "---------\n",
+      "Key: regression\n",
+      "Value: a function to best fit the data\n",
+      "---------\n",
+      "Key: method\n",
+      "Value: a function bound to an object\n",
+      "---------\n"
      ]
     }
    ],
    "source": [
-    "for key, value in words.items():\n",
-    "    print(\"key: {key}\")\n",
-    "    print(\"value: {value}\")\n",
-    "    print(\"---------------\")"
+    "# iterative over both keys and values\n",
+    "for key, value in words.items(): \n",
+    "    print(f\"Key: {key}\")\n",
+    "    print(f\"Value: {value}\")\n",
+    "    print(\"---------\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "1a63f81a",
    "metadata": {},
    "outputs": [
@@ -166,9 +167,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Key: data_structure\n",
+      "Key: data structure\n",
       "Key: regression\n",
-      "Key: function\n"
+      "Key: method\n"
      ]
     }
    ],
@@ -280,16 +281,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e4565bb3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'f': 0, 'e': 10, 'd': 20, 'c': 30, 'b': 40, 'a': 50}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create the same dictionary but with dictionary comprehension\n",
     "\n",
     "# make us of iterables\n",
-    "grade_limit = {grade: for i, grade in enumerate()}"
+    "grade_limit = {grade: i*10 for i, grade in enumerate(\"fedcba\")}\n",
+    "grade_limit"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a35db4e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
