--- a/Python/13_OOP/a_oop_fundamentals.ipynb
+++ b/Python/13_OOP/a_oop_fundamentals.ipynb
@@ -177,17 +177,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "9d4a7187",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Student at 0x1f1d57bee10>"
+       "<__main__.Student at 0x1f1d57c18b0>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,11 +195,16 @@
    "source": [
     "class Student:\n",
     "    def __init__(self, name, TypeOfStudy, accept, school, age):\n",
+    "        # attributes\n",
     "        self.name = name\n",
     "        self.TypeOfStudy = TypeOfStudy\n",
     "        self.accept = accept\n",
     "        self.school = school\n",
     "        self.age = age\n",
+    "        \n",
+    "    # method \n",
+    "    def study(self):\n",
+    "        print(f'{self.name}studies{self.type_of_studies}')\n",
     "\n",
     "\n",
     "# This is a positional type argument\n",
@@ -243,9 +248,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0801fd52",
+   "metadata": {},
+   "source": [
+    "### \\_\\_repr\\_\\_ dunder repper method\n",
+    "- method to represent your class\n",
+    "-  describe how to create an instance from this class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "aba5ed36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student(name=\"Bobbo\", type_of_study=\"economics\", accept=True, school=\"IT Högskola\", age=34)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self, name, type_of_study, accept, school, age):\n",
+    "        self.name = name\n",
+    "        self.type_of_study = type_of_study\n",
+    "        self.accept = accept\n",
+    "        self.school = school\n",
+    "        self.age = age\n",
+    "        \n",
+    "    def study(self):\n",
+    "        print(f'{self.name} studies {self.type_of_study}')\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f'Student(name=\"{self.name}\", type_of_study=\"{self.type_of_study}\", accept={self.accept}, school=\"{self.school}\", age={self.age})'\n",
+    "\n",
+    "\n",
+    "student3 = Student(\n",
+    "    name=\"Bobbo\",\n",
+    "    age=34,\n",
+    "    school=\"IT Högskola\",\n",
+    "    accept=True,\n",
+    "    type_of_study=\"economics\"\n",
+    ")\n",
+    "student3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "4c973af4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student(name=\"Bobbo\", type_of_study=\"economics\", accept=True, school=\"IT Högskola\", age=34)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Student(\n",
+    "    name=\"Bobbo\",\n",
+    "    age=34,\n",
+    "    school=\"IT Högskola\",\n",
+    "    accept=True,\n",
+    "    type_of_study=\"economics\"\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba5ed36",
+   "id": "a680a664",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student(name=\"Bobbo\", type_of_study=\"economics\", accept=True, school=\"IT Högskola\", age=34)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# printing > look for __str__ method >if not exist > look for __repr__ method as a fallback\n",
+    "print(student3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1125da39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student(name=\"Bobbo\", type_of_study=\"economics\", accept=True, school=\"IT Högskola\", age=34)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Implement a dunder string\n",
+    "\n",
+    "class Student:\n",
+    "    def __init__(self, name, type_of_study, accept, school, age):\n",
+    "        self.name = name\n",
+    "        self.type_of_study = type_of_study\n",
+    "        self.accept = accept\n",
+    "        self.school = school\n",
+    "        self.age = age\n",
+    "        \n",
+    "    def study(self):\n",
+    "        print(f'{self.name} studies {self.type_of_study}')\n",
+    "\n",
+    "    # Implement a __str__ dunder string\n",
+    "    # behaves in a special way that it prints strins with it\n",
+    "    def __str__(self):\n",
+    "        return f\"{self.name} is studying {self.type_of_study} in {self.school} school.\"\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f'Student(name=\"{self.name}\", type_of_study=\"{self.type_of_study}\", accept={self.accept}, school=\"{self.school}\", age={self.age})'\n",
+    "\n",
+    "\n",
+    "student3 = Student(\n",
+    "    name=\"Bobbo\",\n",
+    "    age=34,\n",
+    "    school=\"IT Högskola\",\n",
+    "    accept=True,\n",
+    "    type_of_study=\"economics\"\n",
+    ")\n",
+    "student3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f3c52c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student(name=\"Bobbo\", type_of_study=\"economics\", accept=True, school=\"IT Högskola\", age=34)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# RUN student 3 , gets a dunder __repr__\n",
+    "student3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "56c57802",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bobbo is studying economics in IT Högskola school.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# PRINT student 3 , gets a dunder __str__\n",
+    "print(student3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ae4c062",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bobbo is studying economics in IT Högskola school.'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Other way to show\n",
+    "str(student3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "7d45cf0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bobbo studies economics\n"
+     ]
+    }
+   ],
+   "source": [
+    "student3.study()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d19a2c06",
    "metadata": {},
    "outputs": [],
    "source": []
